--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="img/icon.png">
     <title>Magerly - Baby Development App</title>
-    <style>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17002287938"></script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17002287938"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'AW-17002287938');
+	</script>
+	<!-- Event snippet for page view conversion page -->
+	<script>
+		gtag('event', 'conversion', {'send_to': 'AW-17002287938/dz7JCL3Ox8YaEMKmqas_'});
+	</script>
+	<style>
         :root {
             --background: 220 60% 97%;
             --foreground: 220 25% 25%;
