--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/png" href="img/icon.png">
+    <link rel="icon" type="image/png" href="img/icon.png">
     <title>Magerly - Baby Development App</title>
-	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17002287938"></script>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17002287938"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17002287938"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17002287938"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-	  gtag('config', 'AW-17002287938');
-	</script>
-	<!-- Event snippet for page view conversion page -->
-	<script>
-		gtag('event', 'conversion', {'send_to': 'AW-17002287938/dz7JCL3Ox8YaEMKmqas_'});
-	</script>
-	<style>
+        gtag('config', 'AW-17002287938');
+    </script>
+    <!-- Event snippet for page view conversion page -->
+    <script>
+        gtag('event', 'conversion', { 'send_to': 'AW-17002287938/dz7JCL3Ox8YaEMKmqas_' });
+    </script>
+    <style>
         :root {
             --background: 220 60% 97%;
             --foreground: 220 25% 25%;
@@ -1298,40 +1298,23 @@
         </footer>
     </div>
 
-    <div id="installAppModal" class="modal-overlay" style="display: none;">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3 class="modal-title">Install Magerly</h3>
-                <p class="modal-description">
-                    For the best experience and full feature access, please install the Magerly app on your device.
-                </p>
-            </div>
-            <div class="modal-body">
-                <!-- Modal store buttons injected by JS -->
-            </div>
-            <div class="modal-footer">
-                <button id="closeModalButton">Maybe Later</button>
-            </div>
-        </div>
-    </div>
-
     <script>
         const IOS_APP_URL = "https://apps.apple.com/us/app/magerly-baby-development/id6738126809";
         const ANDROID_APP_URL = "https://play.google.com/store/apps/details?id=com.xxdsv.GrowingTogether&hl=en";
 
         const appleLogoSvg = `
-            <svg viewBox="0 0 32 32" fill="currentColor" style="width:100%; height:100%;">
-                <path d="M23.193 31.357c-1.446.068-2.863-.205-4.25-.818-1.388-.614-2.614-1.659-3.679-3.137-1.065-1.477-1.626-3.046-1.683-4.705.057-1.716.683-3.318 1.877-4.807 1.193-1.489 2.762-2.478 4.706-2.967 1.944-.488 3.888-.204 5.832.887-1.25.022-2.5.352-3.729.999-1.228.648-2.293 1.557-3.195 2.728-.901 1.17-1.363 2.466-1.385 3.887-.022 1.42.466 2.818 1.468 4.193.901.999 1.989 1.761 3.263 2.284 1.273.522 2.57.636 3.888.34 1.08-.236 2.198-.84 3.155-1.624l.022-.022c.182-.159.364-.318.523-.5.319-.363.592-.75.796-1.16.114-.227.205-.454.273-.681.932 2.478.659 4.978-.819 7.5-.66.977-1.478 1.784-2.456 2.41-1.217.761-2.569 1.147-3.91 1.147zM23.513 11.216c1.615-1.955 2.57-4.16 2.888-6.387-2.297-.068-4.752 1.09-6.366 3.046-1.615 1.955-2.615 4.296-2.843 6.523 2.433.386 4.707-.931 6.321-3.182z" />
-            </svg>
-        `;
+        <svg viewBox="0 0 32 32" fill="currentColor" style="width:100%; height:100%;">
+            <path d="M23.193 31.357c-1.446.068-2.863-.205-4.25-.818-1.388-.614-2.614-1.659-3.679-3.137-1.065-1.477-1.626-3.046-1.683-4.705.057-1.716.683-3.318 1.877-4.807 1.193-1.489 2.762-2.478 4.706-2.967 1.944-.488 3.888-.204 5.832.887-1.25.022-2.5.352-3.729.999-1.228.648-2.293 1.557-3.195 2.728-.901 1.17-1.363 2.466-1.385 3.887-.022 1.42.466 2.818 1.468 4.193.901.999 1.989 1.761 3.263 2.284 1.273.522 2.57.636 3.888.34 1.08-.236 2.198-.84 3.155-1.624l.022-.022c.182-.159.364-.318.523-.5.319-.363.592-.75.796-1.16.114-.227.205-.454.273-.681.932 2.478.659 4.978-.819 7.5-.66.977-1.478 1.784-2.456 2.41-1.217.761-2.569 1.147-3.91 1.147zM23.513 11.216c1.615-1.955 2.57-4.16 2.888-6.387-2.297-.068-4.752 1.09-6.366 3.046-1.615 1.955-2.615 4.296-2.843 6.523 2.433.386 4.707-.931 6.321-3.182z" />
+        </svg>
+    `;
 
         const googlePlayLogoSvg = `
-            <svg viewBox="0 0 512 512" fill="currentColor" style="width:100%; height:100%;">
-                <path d="M325.31,212.315,159.686,46.341a12.021,12.021,0,0,0-17.007,17.007L275.8,255.961,142.679,382.648A12.022,12.022,0,0,0,159.686,399.655L325.31,245.68a12.021,12.021,0,0,0,0-33.365Z" />
-                <path d="M442.941,213.873,353.05,123.982,138.758,332.116,199.7,393.058A12,12,0,0,0,213.873,399.6L442.941,246.216A12,12,0,0,0,442.941,213.873Z" />
-                <path d="M138.758,123.982,353.05,323.873,442.941,233.982A12,12,0,0,0,442.941,201.639L213.873,46.341A12,12,0,0,0,199.7,52.884L138.758,113.826Z" />
-            </svg>
-        `;
+        <svg viewBox="0 0 512 512" fill="currentColor" style="width:100%; height:100%;">
+            <path d="M325.31,212.315,159.686,46.341a12.021,12.021,0,0,0-17.007,17.007L275.8,255.961,142.679,382.648A12.022,12.022,0,0,0,159.686,399.655L325.31,245.68a12.021,12.021,0,0,0,0-33.365Z" />
+            <path d="M442.941,213.873,353.05,123.982,138.758,332.116,199.7,393.058A12,12,0,0,0,213.873,399.6L442.941,246.216A12,12,0,0,0,442.941,213.873Z" />
+            <path d="M138.758,123.982,353.05,323.873,442.941,233.982A12,12,0,0,0,442.941,201.639L213.873,46.341A12,12,0,0,0,199.7,52.884L138.758,113.826Z" />
+        </svg>
+    `;
 
         function createStoreButton(platform, url, iconSvg, storeName, downloadText) {
             const a = document.createElement('a');
@@ -1375,65 +1358,18 @@
                 detectedOS = 'ios';
             }
 
+            // Always show store buttons for all users
             const smartAppBannerContainer = document.getElementById('smartAppBanner');
-            smartAppBannerContainer.innerHTML = ''; // Clear skeletons
+            smartAppBannerContainer.innerHTML = '';
+            smartAppBannerContainer.appendChild(createStoreButton('ios', IOS_APP_URL, appleLogoSvg, 'App Store', 'Download on the'));
+            smartAppBannerContainer.appendChild(createStoreButton('android', ANDROID_APP_URL, googlePlayLogoSvg, 'Google Play', 'GET IT ON'));
 
-            if (detectedOS === 'ios' || detectedOS === 'other') {
-                smartAppBannerContainer.appendChild(createStoreButton('ios', IOS_APP_URL, appleLogoSvg, 'App Store', 'Download on the'));
+            // Instantly redirect mobile users to the appropriate store
+            if (detectedOS === 'ios') {
+                window.location.href = IOS_APP_URL;
+            } else if (detectedOS === 'android') {
+                window.location.href = ANDROID_APP_URL;
             }
-            if (detectedOS === 'android' || detectedOS === 'other') {
-                smartAppBannerContainer.appendChild(createStoreButton('android', ANDROID_APP_URL, googlePlayLogoSvg, 'Google Play', 'GET IT ON'));
-            }
-
-
-            // Mobile Install Prompt Modal Logic
-            const installModal = document.getElementById('installAppModal');
-            const modalBody = installModal.querySelector('.modal-body');
-            const closeModalButton = document.getElementById('closeModalButton');
-
-            if (detectedOS === 'ios' || detectedOS === 'android') {
-                try {
-                    if (!sessionStorage.getItem('installPromptDismissed')) {
-                        setTimeout(() => {
-                            modalBody.innerHTML = ''; // Clear previous content
-                            if (detectedOS === 'ios') {
-                                modalBody.appendChild(createStoreButton('ios', IOS_APP_URL, appleLogoSvg, 'App Store', 'Download on the'));
-                            } else { // android
-                                modalBody.appendChild(createStoreButton('android', ANDROID_APP_URL, googlePlayLogoSvg, 'Google Play', 'GET IT ON'));
-                            }
-                            installModal.style.display = 'flex';
-                        }, 1500);
-                    }
-                } catch (e) {
-                    console.warn("Session storage not available for install prompt.", e);
-                    // Fallback: show modal if storage is not usable
-                    setTimeout(() => {
-                        modalBody.innerHTML = '';
-                        if (detectedOS === 'ios') {
-                            modalBody.appendChild(createStoreButton('ios', IOS_APP_URL, appleLogoSvg, 'App Store', 'Download on the'));
-                        } else { // android
-                            modalBody.appendChild(createStoreButton('android', ANDROID_APP_URL, googlePlayLogoSvg, 'Google Play', 'GET IT ON'));
-                        }
-                        installModal.style.display = 'flex';
-                    }, 1500);
-                }
-            }
-
-            closeModalButton.addEventListener('click', () => {
-                installModal.style.display = 'none';
-                try {
-                    sessionStorage.setItem('installPromptDismissed', 'true');
-                } catch (e) { console.warn("Session storage not available for setting dismissal.", e); }
-            });
-
-            installModal.addEventListener('click', (event) => {
-                if (event.target === installModal) { // Click on overlay
-                    installModal.style.display = 'none';
-                    try {
-                        sessionStorage.setItem('installPromptDismissed', 'true');
-                    } catch (e) { console.warn("Session storage not available for setting dismissal.", e); }
-                }
-            });
         });
     </script>
 </body>
